--- a/index.html
+++ b/index.html
@@ -620,19 +620,19 @@
                     objectType: 'feed',
                     content: {
                         title: '미래 월급 관상 테스트',
-                        description: `AI가 분석한 내 미래 월급은 ${resultText.textContent}${salaryAmountDisplay.textContent} ${window.location.href} 에서 나도 미래 월급을 확인해보세요!`,
+                        description: `AI가 분석한 내 미래 월급은 ${resultText.textContent}${salaryAmountDisplay.textContent} 에서 나도 미래 월급을 확인해보세요!`,
                         imageUrl: 'https://teachablemachine.withgoogle.com/assets/img/logo.svg', // Consider replacing with a more relevant image
                         link: {
-                            mobileWebUrl: window.location.href,
-                            webUrl: window.location.href,
+                            mobileWebUrl: 'https://future-salary-test.pages.dev',
+                            webUrl: 'https://future-salary-test.pages.dev',
                         },
                     },
                     buttons: [
                         {
                             title: '웹으로 이동',
                             link: {
-                                mobileWebUrl: window.location.href,
-                                webUrl: window.location.href,
+                                mobileWebUrl: 'https://future-salary-test.pages.dev',
+                                webUrl: 'https://future-salary-test.pages.dev',
                             },
                         },
                     ],
