fix: Update KakaoTalk share button text and ensure web redirection

--- a/index.html
+++ b/index.html
@@ -629,7 +629,7 @@
                     },
                     buttons: [
                         {
-                            title: '웹으로 이동',
+                            title: '결과 확인하기',
                             link: {
                                 mobileWebUrl: 'https://future-salary-test.pages.dev',
                                 webUrl: 'https://future-salary-test.pages.dev',
