Add Open Graph meta tags to index.html for improved sharing previews

--- a/index.html
+++ b/index.html
@@ -4,6 +4,8 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>미래 월급 테스트</title>
+    <meta property="og:url" content="https://future-salary-test.pages.dev">
+    <meta property="og:type" content="website">
     <script src="https://cdn.jsdelivr.net/npm/@tensorflow/tfjs@1.3.1/dist/tf.min.js"></script>
     <script src="https://cdn.jsdelivr.net/npm/@teachablemachine/image@0.8/dist/teachablemachine-image.min.js"></script>
     <script src="https://cdn.jsdelivr.net/npm/canvas-confetti@1.9.3/dist/confetti.browser.min.js"></script> <!-- Confetti library -->
@@ -643,7 +645,6 @@
             }
         }
         kakaoShareButton.addEventListener('click', shareKakao);
-
 
         init(); // 페이지 로드 시 모델 초기화
     </script>
