Add technical information and privacy section for service introduction

--- a/index.html
+++ b/index.html
@@ -290,6 +290,25 @@
         <button id="kakao-share-button" style="display:none;">💬 카카오톡 공유하기</button> <!-- Kakao Share button -->
         <button id="reset-button" style="display:none;">🔄 다시하기</button> <!-- Reset button -->
 
+        <!-- 기술 정보 및 개인정보 섹션 -->
+        <section id="tech-info" style="width: 100%; max-width: 500px; margin-top: 30px; padding: 25px; background-color: #f8f9fa; border-radius: 15px; box-shadow: 0 2px 8px rgba(0,0,0,0.05); text-align: left; color: #333;">
+            <h2 style="font-size: 1.8em; color: #333; margin-bottom: 20px; text-align: center; font-weight: 700;">서비스 소개 및 기술 정보 ⚙️</h2>
+            
+            <div style="margin-bottom: 25px;">
+                <h3 style="font-size: 1.3em; color: #0056b3; margin-bottom: 10px; font-weight: 600;">✨ AI 분석 알고리즘</h3>
+                <p style="font-size: 0.95em; line-height: 1.6; color: #555;">
+                    저희 서비스는 구글의 최신 머신러닝 플랫폼인 <strong style="color: #0056b3;">Teachable Machine 2.0</strong>과 강력한 JavaScript 기반의 머신러닝 라이브러리인 <strong style="color: #0056b3;">TensorFlow.js</strong>를 활용하여 제작되었습니다. 이는 단순한 재미를 위한 랜덤 게임이 아닙니다. 수많은 관상 데이터를 학습한 인공지능 모델이 사용자의 얼굴 특징을 정교하게 분석하여 미래 월급을 예측하는 알고리즘을 사용합니다. 웹 표준 기술을 기반으로 구현되어 별도의 앱 설치 없이 어디서든 접근 가능하며, 높은 기술적 완성도를 자랑합니다.
+                </p>
+            </div>
+
+            <div>
+                <h3 style="font-size: 1.3em; color: #d9534f; margin-bottom: 10px; font-weight: 600;">🔒 프라이버시 보안 강조: 사진이 서버로 전송되나요?</h3>
+                <p style="font-size: 1.1em; line-height: 1.8; color: #d9534f; font-weight: bold;">
+                    절대 전송되지 않습니다. 모든 분석 과정은 사용자의 기기(브라우저) 내에서 <strong style="color: #d9534f;">클라이언트 사이드 스크립트로만 처리됩니다.</strong> 따라서 사용자의 사진 데이터가 외부 서버로 전송되거나 저장될 걱정이 전혀 없습니다. 안심하고 서비스를 이용해주세요!
+                </p>
+            </div>
+        </section>
+
         <!-- 관상학 칼럼 섹션 -->
         <div class="blog-section" style="width: 100%; max-width: 500px; margin-top: 40px; text-align: left; background-color: #f9f9f9; padding: 25px; border-radius: 15px; box-shadow: 0 2px 8px rgba(0,0,0,0.05);">
             <h2 style="font-size: 1.8em; color: #333; margin-bottom: 25px; text-align: center; font-weight: 700;">관상학 칼럼 📰</h2>
