--- a/index.html
+++ b/index.html
@@ -442,6 +442,8 @@
             }
         }
     </style>
+    <script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js?client=ca-pub-8318272387440643"
+     crossorigin="anonymous"></script>
 </head>
 <body>
     <header id="main-header">
