--- a/index.html
+++ b/index.html
@@ -544,9 +544,9 @@
     <footer id="footer">
         <p>&copy; 2024 미래 월급 테스트. All rights reserved.</p>
         <p>
-            <a href="#">이용약관</a> |
-            <a href="#">개인정보처리방침</a> |
-            <a href="#">문의하기</a>
+            <a href="terms.html">이용약관</a> |
+            <a href="privacy.html">개인정보처리방침</a> |
+            <a href="mailto:contact@futuresalarytest.com">문의하기</a>
         </p>
     </footer>
 
