구글 애드센스 승인용 콘텐츠 추가 및 ads.txt 생성

--- a/index.html
+++ b/index.html
@@ -542,11 +542,11 @@
     </div>
 
     <footer id="footer">
-        <p>&copy; 2024 미래 월급 테스트. All rights reserved.</p>
+        <p>&copy; 2026 미래 월급 테스트. All rights reserved.</p>
         <p>
             <a href="terms.html">이용약관</a> |
             <a href="privacy.html">개인정보처리방침</a> |
-            <a href="mailto:contact@futuresalarytest.com">문의하기</a>
+            <a href="mailto:rkd743194@gmail.com">문의하기</a>
         </p>
     </footer>
 
