feat: Finalize site with robots.txt, OG tags, and favicon

--- a/index.html
+++ b/index.html
@@ -8,6 +8,10 @@
     <meta property="og:type" content="website">
     <meta name="description" content="AI가 당신의 미래 월급을 예측해드립니다. 무료 관상 테스트를 통해 당신의 운명적인 연봉을 확인하고, 재물운을 높이는 관상학 칼럼을 확인하세요.">
     <meta name="keywords" content="무료 관상 테스트, AI 연봉 예측, 미래 월급, 관상학, 재물운, 운명, 셀카 관상, 얼굴 분석, 연봉 테스트">
+    <meta property="og:title" content="AI 미래 월급 테스트">
+    <meta property="og:description" content="내 관상으로 보는 미래 연봉은 얼마일까? 지금 바로 확인하세요!">
+    <meta property="og:image" content="">
+    <link rel="icon" href="data:image/svg+xml,<svg xmlns=%22http://www.w3.org/2000/svg%22 viewBox=%220 0 100 100%22><text y=%22.9em%22 font-size=%2290%22>💰</text></svg>">
     <script src="https://cdn.jsdelivr.net/npm/@tensorflow/tfjs@1.3.1/dist/tf.min.js"></script>
     <script src="https://cdn.jsdelivr.net/npm/@teachablemachine/image@0.8/dist/teachablemachine-image.min.js"></script>
     <script src="https://cdn.jsdelivr.net/npm/canvas-confetti@1.9.3/dist/confetti.browser.min.js"></script> <!-- Confetti library -->
