feat: Update Teachable Machine model URL

--- a/index.html
+++ b/index.html
@@ -555,7 +555,7 @@
     </footer>
 
     <script type="text/javascript">
-        const URL = "https://teachablemachine.withgoogle.com/models/z_VsKynJ4/";
+        const URL = "https://teachablemachine.withgoogle.com/models/OgIgQ0pYA/";
         let model, maxPredictions;
         let webcamStream = null; // To store webcam stream
 
