feat: 개인정보 보호 문구 index.html에 추가
- index.html 메인 페이지에 사진 저장 관련 개인정보 보호 문구를 눈에 잘 띄게 추가
- 새로운 개인정보 보호 문구 스타일 추가

--- a/index.html
+++ b/index.html
@@ -436,6 +436,17 @@
         .info-section p:last-child {
             margin-bottom: 0;
         }
+        .privacy-alert {
+            background-color: #fff3cd;
+            color: #856404;
+            border: 1px solid #ffeeba;
+            border-radius: 8px;
+            padding: 15px;
+            margin-bottom: 20px;
+            font-size: 1em;
+            line-height: 1.5;
+            text-align: center;
+        }
     </style>
     <script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js?client=ca-pub-8318272387440643"
      crossorigin="anonymous"></script>
@@ -461,6 +472,9 @@
     <!-- Main Content Container -->
     <div id="home-section" class="container">
         <h1>미래 월급 테스트 💰</h1>
+        <div class="privacy-alert">
+            <strong>⚠️ 중요:</strong> 고객님의 사진은 외부 서버로 <strong>절대 전송되거나 저장되지 않습니다.</strong> 모든 AI 분석은 사용자 기기(브라우저) 내에서만 이루어집니다. 안심하고 이용해주세요!
+        </div>
         
         <!-- New "사진 찍기 / 업로드" button -->
         <button id="open-file-dialog-button" class="mode-button" onclick="document.getElementById('image-upload-hidden').click()">📸 사진 찍기 / 업로드</button>
