feat: 상단 로고 클릭 시 홈 화면으로 이동 기능 추가

--- a/blog.html
+++ b/blog.html
@@ -442,7 +442,7 @@
 </head>
 <body>
     <header id="main-header">
-        <div class="header-logo">미래 월급 테스트</div>
+        <a href="index.html" class="header-logo">미래 월급 테스트</a>
         <button id="hamburger-btn">☰</button>
     </header>
 
