--- a/contact.html
+++ b/contact.html
@@ -8,14 +8,9 @@ j=d.createElement(s),dl=l!='dataLayer'?'&l='+l:'';j.async=true;j.src=
 'https://www.googletagmanager.com/gtm.js?id='+i+dl;f.parentNode.insertBefore(j,f);
 })(window,document,'script','dataLayer','GTM-NP97WXZD');</script>
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>미래 월급 테스트</title>
-    <meta property="og:url" content="https://future-salary-test.pages.dev">
-    <meta property="og:type" content="website">
-    <meta name="description" content="AI가 당신의 미래 월급을 예측해드립니다. 무료 관상 테스트를 통해 당신의 운명적인 연봉을 확인하고, 재물운을 높이는 관상학 칼럼을 확인하세요.">
-    <meta name="keywords" content="무료 관상 테스트, AI 연봉 예측, 미래 월급, 관상학, 재물운, 운명, 셀카 관상, 얼굴 분석, 연봉 테스트">
-    <meta property="og:title" content="AI 미래 월급 테스트">
-    <meta property="og:description" content="내 관상으로 보는 미래 연봉은 얼마일까? 지금 바로 확인하세요!">
-    <meta property="og:image" content="">
+    <title>미래 월급 테스트 - 문의하기</title>
+    <meta name="description" content="미래 월급 테스트 서비스에 대한 문의사항을 보내주세요. 이름, 이메일, 메시지를 작성하여 저희에게 직접 연락할 수 있습니다.">
+    <meta name="keywords" content="미래 월급 테스트, 문의, 연락, 고객 지원, 이메일, mailto">
     <link rel="icon" href="data:image/svg+xml,<svg xmlns=%22http://www.w3.org/2000/svg%22 viewBox=%220 0 100 100%22><text y=%22.9em%22 font-size=%2290%22>💰</text></svg>">
     <script src="https://cdn.jsdelivr.net/npm/@tensorflow/tfjs@1.3.1/dist/tf.min.js"></script>
     <script src="https://cdn.jsdelivr.net/npm/@teachablemachine/image@0.8/dist/teachablemachine-image.min.js"></script>
@@ -26,6 +21,7 @@ j=d.createElement(s),dl=l!='dataLayer'?'&l='+l:'';j.async=true;j.src=
 
     <script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js?client=ca-pub-8318272387440643"
      crossorigin="anonymous"></script>
+
 </head>
 <body>
 <noscript><iframe src="https://www.googletagmanager.com/ns.html?id=GTM-NP97WXZD"
@@ -46,39 +42,27 @@ height="0" width="0" style="display:none;visibility:hidden"></iframe></noscript>
         </ul>
     </nav>
 
-    <!-- Main Content Container -->
-    <div id="home-section" class="container">
-        <h1>미래 월급 테스트 💰</h1>
-        <div class="privacy-alert">
-            <strong>⚠️ 중요:</strong> 고객님의 사진은 외부 서버로 <strong>절대 전송되거나 저장되지 않습니다.</strong> 모든 AI 분석은 사용자 기기(브라우저) 내에서만 이루어집니다. 안심하고 이용해주세요!
-        </div>
-
-        
-        <!-- New "사진 찍기 / 업로드" button -->
-        <button id="open-file-dialog-button" class="mode-button" onclick="document.getElementById('image-upload-hidden').click()">📸 사진 찍기 / 업로드</button>
-
-        <!-- Hidden input for file upload -->
-        <input type="file" id="image-upload-hidden" accept="image/*" style="display: none;">
-        
-        <!-- Image preview -->
-        <img id='uploaded-image' src='#' style='display:none; max-width:100%; max-height: 250px; border-radius: 10px; border: 2px dashed #ddd; object-fit: contain; margin-top: 15px;'>
-        <button id="check-salary-button" disabled>월급 확인하기</button>
-        <!-- Loading message with spinner -->
-        <p id="loading-message">
-            <span class="spinner"></span> AI가 분석 중입니다...
+    <div class="container contact-form-container" style="margin-top: 80px;">
+        <h1>문의하기</h1>
+        <form action="mailto:rkd743194@gmail.com" method="post" enctype="text/plain">
+            <div class="form-group">
+                <label for="name">이름:</label>
+                <input type="text" id="name" name="name" required>
+            </div>
+            <div class="form-group">
+                <label for="email">이메일:</label>
+                <input type="email" id="email" name="email" required>
+            </div>
+            <div class="form-group">
+                <label for="message">메시지:</label>
+                <textarea id="message" name="message" required></textarea>
+            </div>
+            <button type="submit" class="submit-button">메일 보내기</button>
+        </form>
+        <p class="mailto-link-container">
+            또는 다음 이메일로 직접 문의하실 수 있습니다: <a href="mailto:rkd743194@gmail.com">rkd743194@gmail.com</a>
         </p>
-        <p id="result-text"></p>
-        <p id="salary-amount"></p> <!-- Add element for numerical salary -->
-        <button id="share-button" style="display:none;">🔗 결과 공유하기</button> <!-- Web Share button -->
-        <button id="kakao-share-button" style="display:none;">💬 카카오톡 공유하기</button> <!-- Kakao Share button -->
-        <button id="reset-button" style="display:none;">🔄 다시하기</button> <!-- Reset button -->
     </div>
-
-
-
-
-
-
 
     <footer id="footer">
         <p>&copy; 2026 미래 월급 테스트. All rights reserved.</p>
